--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "eduardo-uribe",
+  "name": "eduardo-uribe-cruz",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "buid": "npx @11ty/eleventy eleventy",
+    "build": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve",
-    "quiet": "npx @11ty/eleventy eleventy --quiet"
+    "quiet": "npx @11ty/eleventy --quiet",
+    "dryrun": "npx @11ty/eleventy --dryrun"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.2",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0"
+    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0"
   }
 }
