Add a search index file.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx @11ty/eleventy",
-    "serve": "npx @11ty/eleventy --serve",
+    "serve": "npx @11ty/eleventy --quiet --serve",
     "quiet": "npx @11ty/eleventy --quiet",
     "dryrun": "npx @11ty/eleventy --dryrun"
   },
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^3.0.0-alpha.4",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0"
   }
 }
